--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
   </head>
 
 <body>
-    
+    <script src="script.js"></script>
 
     <div class="sidenav">
         <div class="jonas_headshot">
@@ -21,7 +21,7 @@
             <p>Software Developer</p>
         </div>
 
-        <div id="main_menu" class="main_menu">
+        <div class="main_menu">
             <a href="index.html">Home</a>
             <a href="about_me.html">About Me</a>
             <a href="projects.html">Projects</a>
@@ -39,16 +39,12 @@
   
     <!-- Page content -->
     <div class="main">
-        <div class="hi">
-            <p>Hello!</p>
-        </div>
-
-        <div class="introduction_text">
-            <p>I'm Jonas, a full stack software developer. <br> 
-                I desgin and develop mobile software with a <br> focus on ethics, accessibility and social justice.</p>
+        <div class="title">
+            <h2>Hobbies</h2>
         </div>
     </div>
-
-    <script src="script.js"></script>
-
 </body>
+
+
+
+<img class="vector_image" src="vector_field.png" alt="Gradient of purple vectors going outwards in a circle">
