--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;700&display=swap" rel="stylesheet">
   </head>
 
-<body>
+  <body>
     
 
     <div class="sidenav">
@@ -39,13 +39,8 @@
   
     <!-- Page content -->
     <div class="main">
-        <div class="hi">
-            <p>Hello!</p>
-        </div>
-
-        <div class="introduction_text">
-            <p>I'm Jonas, a full stack software developer. <br> 
-                I desgin and develop mobile software with a <br> focus on ethics, accessibility and social justice.</p>
+        <div class="title">
+            <h2>Projects</h2>
         </div>
     </div>
 
