Added title, icons, and language flags to pages

--- a/about_me.html
+++ b/about_me.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <head>
+    <title>Jonas Costa - About Me</title>
+    <link rel="icon" href="vector_field.png">
     <link rel="stylesheet" href="home_screen.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -8,7 +10,6 @@
   </head>
 
   <body>
-    <script src="script.js"></script>
 
     <div class="sidenav">
         <div class="jonas_headshot">
@@ -21,13 +22,25 @@
             <p>Software Developer</p>
         </div>
 
-        <div class="main_menu">
+        <div id="main_menu" class="main_menu">
             <a href="index.html">Home</a>
             <a href="about_me.html">About Me</a>
             <a href="projects.html">Projects</a>
             <a href="hobbies.html">Hobbies</a>
             <a href="contact.html">Contact</a>
         </div>
+
+        <div class="language">
+            <a href="#">
+                <img class="portuguese" src="brazil_flag.png" alt="Flag of Brazil">
+            </a>
+            
+            <a href="about_me.html">
+                <img class="english" src="usa_flag.png" alt="Flag of United States">
+            </a>
+            
+        </div>
+
     </div>
 
 
@@ -43,5 +56,7 @@
             <h2>About Me</h2>
         </div>
     </div>
+
+    <script src="script.js"></script>
 
 </body>
