--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <head>
+    <title>Jonas Costa - Projects</title>
+    <link rel="icon" href="vector_field.png">
     <link rel="stylesheet" href="home_screen.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,6 +30,18 @@
             <a href="hobbies.html">Hobbies</a>
             <a href="contact.html">Contact</a>
         </div>
+
+        <div class="language">
+            <a href="#">
+                <img class="portuguese" src="brazil_flag.png" alt="Flag of Brazil">
+            </a>
+            
+            <a href="projects.html">
+                <img class="english" src="usa_flag.png" alt="Flag of United States">
+            </a>
+            
+        </div>
+
     </div>
 
 
