--- a/hobbies.html
+++ b/hobbies.html
@@ -20,7 +20,7 @@
 
         <h1>Jonas Costa</h1>
         <div class="job">
-            <p>Software Developer</p>
+            Software Developer
         </div>
 
         <div id="main_menu" class="main_menu">
