--- a/hobbies.html
+++ b/hobbies.html
@@ -58,6 +58,14 @@
         <div class="title">
             <h2>Hobbies</h2>
         </div>
+
+        <div class="item_content">
+            <h3>Hiking</h3>
+            <img class="hiking_image" src="hiking.jpg" alt="Jonas sitting on a rock in front of a lake and a mountain.">
+            <p>I started hiking at UWC-USA, the international high school I attended in New Mexico. Since my first trip, I have spent in total almost two months hiking and camping. I enjoy being in contact with nature, seeing animals in their natural environment, and the sense of community that can be constructed when hiking in a group. Personally, it is a way to release stress and find joy in the small things around me.</p>
+
+
+        </div>
     </div>
 
     <script src="script.js"></script>
