Fixed issues with resizing

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="introduction_text">
             <p>I'm Jonas, a full stack software developer. <br> 
-                I desgin and develop mobile software with a <br> 
+                I design and develop mobile software with a <br> 
                 focus on ethics, accessibility and social justice.</p>
         </div>
     </div>
