--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <!-- Page content -->
     <div class="main">
         <div class="hi">
-            <p>Hello!</p>
+            <p id="greetings">Hello!</p>
         </div>
 
         <div class="introduction_text">
-            <p>I'm Jonas, a full stack software developer. <br> 
-                I design and develop mobile software with a <br> 
+            <p>I'm Jonas, a full stack software developer.<br>  
+                I design and develop mobile software with a 
                 focus on ethics, accessibility and social justice.</p>
         </div>
     </div>
