--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="contact.html">Contact</a>
 
             <div class="language">
-                <a href="#">
+                <a href="index_br.html">
                     <img class="portuguese" src="resources/brazil_flag.png" alt="Flag of Brazil">
                 </a>
                 
