Added pages in Portuguese

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;700&display=swap" rel="stylesheet">
+    <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
   </head>
 
 <body>
@@ -33,12 +34,12 @@
             <a href="contact.html">Contact</a>
 
             <div class="language">
-                <a href="index_br.html">
-                    <img class="portuguese" src="resources/brazil_flag.png" alt="Flag of Brazil">
+                <a href="website_pt_br/index.html">
+                    <img class="portuguese" src="resources/brazil_flag.png" alt="Ver página em Português">
                 </a>
                 
                 <a href="index.html">
-                    <img class="english" src="resources/usa_flag.png" alt="Flag of United States">
+                    <img class="english" src="resources/usa_flag.png" alt="See page in English">
                 </a>
                 
             </div>
@@ -61,7 +62,7 @@
         </div>
 
         <div class="introduction_text">
-            <p>I'm Jonas, a full stack software developer.<br>  
+            <p>I'm Jonas, a full-stack software developer.<br>  
                 I design and develop mobile software with a 
                 focus on ethics, accessibility and social justice.</p>
         </div>
