--- a/about_me.html
+++ b/about_me.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;700&display=swap" rel="stylesheet">
+    <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
   </head>
 
   <body>
@@ -31,12 +32,12 @@
             <a href="contact.html">Contact</a>
 
             <div class="language">
-                <a href="#">
-                    <img class="portuguese" src="resources/brazil_flag.png" alt="Flag of Brazil">
+                <a href="website_pt_br/about_me.html">
+                    <img class="portuguese" src="resources/brazil_flag.png" alt="Ver página em Português">
                 </a>
                 
                 <a href="about_me.html">
-                    <img class="english" src="resources/usa_flag.png" alt="Flag of United States">
+                    <img class="english" src="resources/usa_flag.png" alt="See page in English">
                 </a>
                 
             </div>
